Fixing issues with the navigation height on mobile devices

--- a/asset/styling/scss/style.scss
+++ b/asset/styling/scss/style.scss
@@ -163,10 +163,13 @@ sub {
 
 .global_navigation-logo-container,
 .global_navigation-icon-container {
-  @media (max-width: $px-breakpoint-primary_width) {}
-  @media (min-width: $px-breakpoint-primary_width) {}
+  @media (max-width: $px-breakpoint-primary_width) {
+    font-size: 1.5rem;
+  }
+  @media (min-width: $px-breakpoint-primary_width) {
+    font-size: 1.8rem;
+  }
   
-  font-size: 1.8rem;
 }
 
 .global_navigation-logo-container {
@@ -215,7 +218,7 @@ sub {
   // ~~~~~~~~~~~~~~~~~~~~   
    
   position: absolute;
-  height: 100%;
+  min-height: 100vh;
   overflow: scroll;   
   right: 0;
   top: 0;
@@ -644,6 +647,7 @@ sub {
 // ~~~~~~~~~~~~~~~~~~~~
 
 .experience-container {
+  @media (max-width: $px-breakpoint-primary_width) and (max-height: $px-breakpoint-primary_height) {}
   @media (max-width: $px-breakpoint-primary_width) {
     grid-column: 2 / 5;
     grid-row: 2 / 5;
@@ -664,6 +668,7 @@ sub {
   @media (max-width: $px-breakpoint-primary_width) {
     grid-column: 2 / 3;
   }
+  @media (max-width: $px-breakpoint-primary_width) and (max-height: $px-breakpoint-primary_height) {}
   @media (min-width: $px-breakpoint-primary_width) {}
   
   align-self: center;
@@ -676,10 +681,10 @@ sub {
     letter-spacing: 0.6rem;
     line-height: 2.5rem;
   }
+  @media (max-width: $px-breakpoint-primary_width) and (max-height: $px-breakpoint-primary_height) {}
   @media (min-width: $px-breakpoint-primary_width) {
     font-size: 2.5rem;
     letter-spacing: 0.8rem;
-    
   }
   
   font-family: $font_family-primary;
@@ -688,8 +693,12 @@ sub {
   text-transform: uppercase;
 
   li {
+    
     @media (max-width: $px-breakpoint-primary_width) {
       margin-bottom: 36px;
+    }
+    @media (max-width: $px-breakpoint-primary_width) and (max-height: $px-breakpoint-primary_height) {
+      margin-bottom: 24px;
     }
     @media (min-width: $px-breakpoint-primary_width) {
       margin-bottom: 30px;
@@ -702,6 +711,7 @@ sub {
 
 
   li:hover {
+    @media (max-width: $px-breakpoint-primary_width) and (max-height: $px-breakpoint-primary_height) {}
     @media (max-width: $px-breakpoint-primary_width) {}
     @media (min-width: $px-breakpoint-primary_width) {}
   
@@ -1124,3 +1134,9 @@ sub {
   font-weight: $font_weight-light;
   text-transform: lowercase;
 }
+
+
+
+
+
+// @media (max-width: $px-breakpoint-primary_width) and (max-height: $px-breakpoint-primary_height) {}
